BUG-87386. Overview, Pairings, Clusters pages break their layouts in smaller resolution screens (#678)

--- a/dp-plugin-apps/dlm/dlm-web/src/app/pages/overview/resource-summary/summary-panel/summary-panel.component.scss
+++ b/dp-plugin-apps/dlm/dlm-web/src/app/pages/overview/resource-summary/summary-panel/summary-panel.component.scss
@@ -11,7 +11,7 @@ $panel-border-color: #f0f0f0;
 $cell-border: 1px solid #ddd;
 
 :host /deep/ .row > dlm-summary-panel-cell {
-  &.col-md-4:nth-child(2) .cell-value {
+  &.col-xs-4:nth-child(2) .cell-value {
     border-left: $cell-border;
     border-right: $cell-border;
     padding-bottom: 10px;
